objects/Convert_Attachments_to_Files_Settings__c.object
<CustomObject><fields>
        <fullName>Chatter_Post_to_Case_Inbound_Email_File__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Email-to-Case when the Attachment of Inbound EmailMessage is converted to File, do you want a Chatter Post to be made on the Case with the File so team can begin collaborating and commenting about it? Best when Case Team follows the Case too.</description>
        <inlineHelpText>For Email-to-Case when the Attachment of Inbound EmailMessage is converted to File, do you want a Chatter Post to be made on the Case with the File so team can begin collaborating and commenting about it? Best when Case Team follows the Case too.</inlineHelpText>
        <label>Chatter Post to Case Inbound Email File?</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Conversion_Result_Email_Notifications__c</fullName>
        <description>Comma-separated list of email addresses to send conversion result information to after each batch of conversions. Email may contain up to 200 conversion results at a time indicating which were successful and any warnings. If blank then no emails are sent.</description>
        <inlineHelpText>Comma-separated list of email addresses to send conversion result information to after each batch of conversions. Email may contain up to 200 conversion results at a time indicating which were successful and any warnings. If blank then no emails are sent.</inlineHelpText>
        <label>Conversion Result Email Notifications</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Convert_If_Feed_Tracking_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Chatter Feed Tracking is disabled for the attachment's parent object then the converted File won't be able to be shared with the parent record. Enable this option to convert the attachment anyways even though it will not be shared with any records.</description>
        <inlineHelpText>If Chatter Feed Tracking is disabled for the attachment's parent object then the converted File won't be able to be shared with the parent record. Enable this option to convert the attachment anyways even though it will not be shared with any records.</inlineHelpText>
        <label>Convert If Feed Tracking Disabled?</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Convert_Inbound_Email_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should Attachments of EmailMessage records related to Cases be converted to Files? The File will belong at the Case level. Only applies to Incoming Emails for Email-to-Case.</description>
        <inlineHelpText>Should Attachments of EmailMessage records related to Cases be converted to Files? The File will belong at the Case level. Only applies to Incoming Emails for Email-to-Case.</inlineHelpText>
        <label>Convert Inbound Email Attachments?</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Convert_in_Near_Real_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables 'after insert' trigger on Attachment that enqueues job to convert into Files in near real-time. This async conversion does not slow down save transaction, and if 'Delete Attachments' option is enabled then deletes in separate transaction too.</description>
        <inlineHelpText>Enables 'after insert' trigger on Attachment that enqueues job to convert into Files in near real-time. This async conversion does not slow down save transaction, and if 'Delete Attachments' option is enabled then deletes in separate transaction too.</inlineHelpText>
        <label>Convert in Near Real Time?</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Delete_Attachment_Once_Converted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked then conversion process will delete the original Attachment once successfully converted to File. You may want to delete them to save storage space in your org.</description>
        <inlineHelpText>When checked then conversion process will delete the original Attachment once successfully converted to File. You may want to delete them to save storage space in your org.</inlineHelpText>
        <label>Delete Attachment Once Converted?</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Share_Private_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Attachments have 'IsPrivate' field that limits access to owner and admins. Files related to records are not private. Enable this option to share converted private attachment Files with their parent record and to anyone who has access to the parent record.</description>
        <inlineHelpText>Attachments have 'IsPrivate' field that limits access to owner and admins. Files related to records are not private. Enable this option to share converted private attachment Files with their parent record and to anyone who has access to the parent record.</inlineHelpText>
        <label>Share Private Attachments?</label>
        <type>Checkbox</type>
    </fields><customSettingsType>Hierarchy</customSettingsType><description>Controls when and how certain attachments are converted to files.</description><enableFeeds>false</enableFeeds><label>Convert Attachments to Files Settings</label><visibility>Public</visibility></CustomObject>